--- a/html/sell.html
+++ b/html/sell.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="index.html"></a>
+            <a class="navbar-brand" href="main.html"></a>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -18,10 +18,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#products">Sản Phẩm</a>
+                        <a class="nav-link" href="main.html#products">Sản Phẩm</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#categories">Danh Mục</a>
+                        <a class="nav-link" href="main.html#categories">Danh Mục</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="sell.html">Bán Hàng</a>
