--- a/html/sign-in.html
+++ b/html/sign-in.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="main.html">
                 <strong>MarketPlace</strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -19,10 +19,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Trang Chủ</a>
+                        <a class="nav-link" href="main.html">Trang Chủ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#products">Sản Phẩm</a>
+                        <a class="nav-link" href="main.html#products">Sản Phẩm</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sell.html">Bán Hàng</a>
