11gio3phutngay18thang10nam2025

--- a/html/main.html
+++ b/html/main.html
@@ -21,6 +21,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
+                        <a class="nav-link" href="mainforgames.html">Mua & Bán Tài Khoản Games</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" href="#products">Sản Phẩm</a>
                     </li>
                     <li class="nav-item">
@@ -47,6 +50,7 @@
                     <div class="hero-actions">
                         <a href="sell.html" class="btn btn-primary btn-lg">Bắt Đầu Bán</a>
                         <a href="#products" class="btn btn-outline-light btn-lg ms-3">Xem Sản Phẩm</a>
+                        <a href="mainforgames.html" class="btn btn-outline-light btn-lg ms-3">Mua Bán Tài Khoản Games?</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -69,13 +73,119 @@
         </div>
     </section>
 
+         Flash Sale 24h 
+    <section class="flash-sale" id="flash-sale">
+        <div class="container">
+            <div class="flash-sale-header">
+                <div class="flash-sale-title">
+                    <span class="flash-icon">⚡</span>
+                    <h2>Flash Sale 24h</h2>
+                </div>
+                <div class="countdown-timer">
+                    <div class="countdown-item">
+                        <span class="countdown-value" id="hours">00</span>
+                        <span class="countdown-label">Giờ</span>
+                    </div>
+                    <span class="countdown-separator">:</span>
+                    <div class="countdown-item">
+                        <span class="countdown-value" id="minutes">00</span>
+                        <span class="countdown-label">Phút</span>
+                    </div>
+                    <span class="countdown-separator">:</span>
+                    <div class="countdown-item">
+                        <span class="countdown-value" id="seconds">00</span>
+                        <span class="countdown-label">Giây</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="flash-sale-products">
+                <div class="flash-product-card">
+                    <div class="flash-discount">-40%</div>
+                    <img src="/placeholder.svg?height=200&width=200" alt="Tai Nghe Không Dây" class="flash-product-image">
+                    <div class="flash-product-info">
+                        <h5>Tai Nghe Không Dây Premium</h5>
+                        <div class="flash-price-section">
+                            <span class="flash-original-price">12.500.000₫</span>
+                            <span class="flash-sale-price">7.500.000₫</span>
+                        </div>
+                        <div class="flash-stock">
+                            <div class="stock-bar">
+                                <div class="stock-fill" style="width: 75%;"></div>
+                            </div>
+                            <span class="stock-text">Còn 45/60 sản phẩm</span>
+                        </div>
+                        <button class="btn btn-danger btn-sm w-100 mt-2">Mua Ngay</button>
+                    </div>
+                </div>
+
+                <div class="flash-product-card">
+                    <div class="flash-discount">-35%</div>
+                    <img src="/placeholder.svg?height=200&width=200" alt="Đồng Hồ Thông Minh" class="flash-product-image">
+                    <div class="flash-product-info">
+                        <h5>Đồng Hồ Thông Minh Pro</h5>
+                        <div class="flash-price-section">
+                            <span class="flash-original-price">8.000.000₫</span>
+                            <span class="flash-sale-price">5.200.000₫</span>
+                        </div>
+                        <div class="flash-stock">
+                            <div class="stock-bar">
+                                <div class="stock-fill" style="width: 60%;"></div>
+                            </div>
+                            <span class="stock-text">Còn 30/50 sản phẩm</span>
+                        </div>
+                        <button class="btn btn-danger btn-sm w-100 mt-2">Mua Ngay</button>
+                    </div>
+                </div>
+
+                <div class="flash-product-card">
+                    <div class="flash-discount">-50%</div>
+                    <img src="/placeholder.svg?height=200&width=200" alt="Loa Bluetooth" class="flash-product-image">
+                    <div class="flash-product-info">
+                        <h5>Loa Bluetooth Cao Cấp</h5>
+                        <div class="flash-price-section">
+                            <span class="flash-original-price">4.000.000₫</span>
+                            <span class="flash-sale-price">2.000.000₫</span>
+                        </div>
+                        <div class="flash-stock">
+                            <div class="stock-bar">
+                                <div class="stock-fill" style="width: 90%;"></div>
+                            </div>
+                            <span class="stock-text">Còn 18/20 sản phẩm</span>
+                        </div>
+                        <button class="btn btn-danger btn-sm w-100 mt-2">Mua Ngay</button>
+                    </div>
+                </div>
+
+                <div class="flash-product-card">
+                    <div class="flash-discount">-30%</div>
+                    <img src="/placeholder.svg?height=200&width=200" alt="Bàn Phím Gaming" class="flash-product-image">
+                    <div class="flash-product-info">
+                        <h5>Bàn Phím Gaming RGB</h5>
+                        <div class="flash-price-section">
+                            <span class="flash-original-price">5.000.000₫</span>
+                            <span class="flash-sale-price">3.500.000₫</span>
+                        </div>
+                        <div class="flash-stock">
+                            <div class="stock-bar">
+                                <div class="stock-fill" style="width: 40%;"></div>
+                            </div>
+                            <span class="stock-text">Còn 8/20 sản phẩm</span>
+                        </div>
+                        <button class="btn btn-danger btn-sm w-100 mt-2">Mua Ngay</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
      Categories 
     <section class="categories" id="categories">
         <div class="container">
             <h2 class="section-title">Danh Mục Sản Phẩm</h2>
             <div class="row g-4">
                 <div class="col-md-3 col-sm-6">
-                    <a href="./categories/dien-tu.html" class="text-decoration-none">
+                    <a href="dien-tu.html" class="text-decoration-none">
                         <div class="category-card" style="cursor: pointer;">
                             <div class="category-icon">📱</div>
                             <h4>Điện Tử</h4>
@@ -84,7 +194,7 @@
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="./categories/thoi-trang.html" class="text-decoration-none">
+                    <a href="thoi-trang.html" class="text-decoration-none">
                         <div class="category-card" style="cursor: pointer;">
                             <div class="category-icon">👕</div>
                             <h4>Thời Trang</h4>
@@ -93,7 +203,7 @@
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="./categories/nha-cua-vuon.html" class="text-decoration-none">
+                    <a href="nha-cua-vuon.html" class="text-decoration-none">
                         <div class="category-card" style="cursor: pointer;">
                             <div class="category-icon">🏠</div>
                             <h4>Nhà Cửa & Vườn</h4>
@@ -102,7 +212,7 @@
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="./categories/the-thao.html" class="text-decoration-none">
+                    <a href="the-thao.html" class="text-decoration-none">
                         <div class="category-card" style="cursor: pointer;">
                             <div class="category-icon">⚽</div>
                             <h4>Thể Thao</h4>
@@ -359,18 +469,26 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/auth.js"></script>
     <script>
-        function showProductDetail(name, price, description) {
-            // Check if user is logged in before allowing to view/buy
-            if (!auth.isLoggedIn()) {
-                if (confirm('Bạn cần đăng nhập để xem chi tiết sản phẩm. Đăng nhập ngay?')) {
-                    localStorage.setItem('redirectAfterLogin', window.location.href);
-                    window.location.href = 'sign-in.html';
-                }
-                return;
-            }
+        function updateCountdown() {
+            const now = new Date().getTime();
+            const endOfDay = new Date();
+            endOfDay.setHours(23, 59, 59, 999);
+            const timeLeft = endOfDay - now;
 
+            const hours = Math.floor((timeLeft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            const minutes = Math.floor((timeLeft % (1000 * 60 * 60)) / (1000 * 60));
+            const seconds = Math.floor((timeLeft % (1000 * 60)) / 1000);
+
+            document.getElementById('hours').textContent = String(hours).padStart(2, '0');
+            document.getElementById('minutes').textContent = String(minutes).padStart(2, '0');
+            document.getElementById('seconds').textContent = String(seconds).padStart(2, '0');
+        }
+
+        updateCountdown();
+        setInterval(updateCountdown, 1000);
+
+        function showProductDetail(name, price, description) {
             document.getElementById('modalProductName').textContent = name;
             document.getElementById('modalProductTitle').textContent = name;
             document.getElementById('modalProductPrice').textContent = price;
@@ -384,8 +502,6 @@
             button.addEventListener('click', function() {
                 document.querySelectorAll('.filter-buttons .btn').forEach(btn => btn.classList.remove('active'));
                 this.classList.add('active');
-                
-                // Filter logic can be added here if needed
             });
         });
     </script>
