--- a/html/sign-in.html
+++ b/html/sign-in.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="main.html">
+            <a class="navbar-brand" href="index.html">
                 <strong>MarketPlace</strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -19,10 +20,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="main.html">Trang Chủ</a>
+                        <a class="nav-link" href="index.html">Trang Chủ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="main.html#products">Sản Phẩm</a>
+                        <a class="nav-link" href="index.html#products">Sản Phẩm</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sell.html">Bán Hàng</a>
@@ -35,6 +36,7 @@
         </div>
     </nav>
 
+    <!-- Sign In Form -->
     <div class="container">
         <div class="row justify-content-center align-items-center" style="min-height: 80vh;">
             <div class="col-md-5">
@@ -79,6 +81,7 @@
         </div>
     </div>
 
+    <!-- Footer -->
     <footer class="footer mt-5">
         <div class="container">
             <div class="row">
@@ -89,8 +92,8 @@
                 <div class="col-md-3">
                     <h6>Liên Kết</h6>
                     <ul class="list-unstyled">
-                        <li><a href="main.html">Trang Chủ</a></li>
-                        <li><a href="main.html#products">Sản Phẩm</a></li>
+                        <li><a href="index.html">Trang Chủ</a></li>
+                        <li><a href="index.html#products">Sản Phẩm</a></li>
                         <li><a href="sell.html">Bán Hàng</a></li>
                     </ul>
                 </div>
@@ -109,5 +112,12 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.querySelector('form').addEventListener('submit', function(e) {
+            e.preventDefault();
+            alert('Đăng nhập thành công!');
+            window.location.href = 'main.html';
+        });
+    </script>
 </body>
 </html>
